--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   lint:
-    name: Eslint linting
+    name: eslint linting
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
