--- a/package.json
+++ b/package.json
@@ -52,10 +52,10 @@
     "@types/big.js": "^6.1.2",
     "@types/bs58": "^4.0.1",
     "@types/enzyme": "^3.10.8",
+    "@types/history": "^4.7.8",
     "@types/jest": "^26.0.24",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.7.10",
-    "@types/history": "^4.7.8",
     "@types/react": "^16.14.8",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.16",
@@ -145,6 +145,7 @@
     "@emotion/cache": "^11.4.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@ethersproject/bignumber": "^5.6.2",
     "@mui/icons-material": "^5.0.1",
     "@mui/lab": "^5.0.0-alpha.49",
     "@mui/material": "^5.0.2",
